@@ -18,7 +18,6 @@ displays=default-display
 # Display configuration
 #
 # vt = Virtual terminal to start on (0-n or 'active')
-# layout = Default keyboard layout to use in greeter and in sessions
 # greeter-theme = Greeter theme
 # greeter-user = User to run greeter process as
 # session = Default session
@@ -32,7 +31,6 @@ displays=default-display
 #
 [default-display]
 vt=active
-#layout=us
 #greeter-theme=example-gtk-gnome
 #greeter-user=lightdm
 #session=gnome
