@@ -334,15 +334,6 @@ g_object_connect (G_OBJECT (greeter), "quit", G_CALLBACK (quit_cb), NULL);
 @Returns: 
 
 
-<!-- ##### FUNCTION ldm_greeter_get_default_layout ##### -->
-<para>
-
-</para>
-
-@greeter: 
-@Returns: 
-
-
 <!-- ##### FUNCTION ldm_greeter_get_layouts ##### -->
 <para>
 
