@@ -69,10 +69,6 @@ void display_set_greeter_theme (Display *display, const gchar *greeter_theme);
 
 const gchar *display_get_greeter_theme (Display *display);
 
-void display_set_default_layout (Display *display, const gchar *layout);
-
-const gchar *display_get_default_layout (Display *display);
-
 void display_set_default_session (Display *display, const gchar *session);
 
 const gchar *display_get_default_session (Display *display);
